--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "immer": "^11.1.0",
     "lucide-react": "^0.562.0",
     "next": "16.0.10",
+    "pdfjs-dist": "^5.4.530",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-pdf": "^10.3.0",
     "react-tooltip": "^5.30.0",
     "zustand": "^5.0.9"
   },
