--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "immer": "^11.1.0",
     "lucide-react": "^0.562.0",
     "next": "16.0.10",
+    "next-themes": "^0.4.6",
     "pdfjs-dist": "^5.4.530",
     "react": "19.2.1",
     "react-dom": "19.2.1",
